# ArchUpdateChecker

./: PKGBUILD  README.md  auc.py  pyproject.toml
ArchUpdateChecker/: auc.py
auc/: main.py
auc/cli/: main.py
auc/client/: daemon_conn.py  log_conn.py
auc/daemon/: config.py  daemon.py  listener.py  main.py  mirrorlist.py  pacman_updater.py  state.py  yay_updater.py
auc/daemon/util/: config.py  logger_io.py  socket_handler.py  state.py  unix_http.py
auc/prompt/: main.py  prompt_thread.py  prompt_window.py  updates_window.py
aucd/: PKGBUILD  pyproject.toml
aucd/auc/cli/: main.py
aucd/auc/client/: daemon_conn.py  log_conn.py
aucd/auc/daemon/: listener.py  main.py  pacman_updater.py  yay_updater.py
aucp/: PKGBUILD  pyproject.toml
aucp/auc/prompt/: main.py  prompt_thread.py  prompt_window.py
src/: auc.py  auccli.py  aucgtk.py  auclog.py  aucpacman.py  aucpmml.py
src.old/: auc.py  auccli.py  aucgtk.py  aucpacman.py
