[tool.poetry]
name = "auc"
version = "1.1.0"
description = ""
authors = ["Lucy Hancock <lucy@leh.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyyaml = "^6.0"
pythonping = "^1.1.4"
requests-unixsocket = "^0.3.0"
urllib3 = "1.26.16"

[tool.poetry.scripts]
auc = "auc.main:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
