[tool.poetry]
name = "auc"
version = "1.4.0"
description = "A tool for checking for pacman based distro updates. It's probably really bad."
authors = ["Lucy Hancock <lucy@leh.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pyyaml = "^6.0"
requests-unixsocket2 = "^0.4.0"
urllib3 = "1.26.18"
pygobject = "^3.44.1"

[tool.poetry.scripts]
auc = "auc.cli.main:run"
aucd = "auc.daemon.main:run"
aucp = "auc.prompt.main:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
