[tool.poetry]
name = "aucp"
version = "1.6.0"
description = "GUI prompter for auc. It's probably really bad."
authors = ["Lucy Hancock <lucy@leh.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pyyaml = "^6.0.2"
requests-unixsocket2 = "^0.4.2"
urllib3 = "^2.3.0"
pygobject = "^3.50.0"

[tool.poetry.scripts]
aucp = "aucp.auc.prompt.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
